# simulavr

./: .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: build_wheels.yml
cmake/: GetGitInfo.cmake
debian/: CMakeLists.txt  mk_debian_package.sh.in  python-simulavr.postinst.in  python-simulavr.prerm.in
libsim/: CMakeLists.txt
pysimulavr/: CMakeLists.txt
scripts/: build_index.py
