[build-system]
requires = ["scikit-build-core>=0.9", "setuptools-scm", "swig>=4.0,<4.4"]
build-backend = "scikit_build_core.build"

[project]
name = "pysimulavr"
dynamic = ["version"]
description = "Python bindings for the simulavr AVR microcontroller simulator"
authors = [{name = "Klaus Rudolph et al.", email = "simulavr-devel@nongnu.org"}]
license = {text = "GPL-2.0-or-later"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Testing",
]

[tool.setuptools_scm]
tag_regex = "^release-(?P<version>[0-9]+(?:\\.[0-9]+)*)$"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.build-type = "Release"
cmake.version = ">=3.18"
wheel.packages = []   # no pure-Python source tree; files installed by CMake

